// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addons/Docs with some emoji 1`] = `
<storybook-wrapper>
  <storybook-button-component
    ng-reflect-text="😀 😎 👍 💯"
  >
    <button>
      😀 😎 👍 💯
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;

exports[`Storyshots Addons/Docs with text 1`] = `
<storybook-wrapper>
  <storybook-button-component
    ng-reflect-text="hello button"
  >
    <button>
      hello button
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;
